# ai_printer

./: .gitignore  AI.py  README.md  listen.py  main.py  printer.py  pyproject.toml  requirements.txt  setup.py  temp_print.txt
ai printer/: __init__.py  main.py
src/: AI.py  listen.py  main.py  printer.py
tests/: listen_test_script.py
