[project]
name = "chatgpt-printer"
version = "0.1.0"
description = "a printer that uses ai to respond to you"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-speech>=2.28.1",
    "numpy>=2.1.3",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.11.0",
    "standard-aifc>=3.13.0",
]
